--- a/bags.html
+++ b/bags.html
@@ -283,7 +283,7 @@
 <body>
 <header>
     <div class="brand">
-      <img src="logo.png" alt="Scents & Slay Aesthetics logo">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/logo.png" alt="Scents & Slay Aesthetics logo">
       <div>
         <div style="font-weight:800">Scents & Slay Aesthetics</div>
         <div style="font-size:12px;color:var(--muted)">Shop Online</div>
@@ -333,8 +333,8 @@
 
   <div class="img-slider">
     <div class="slides">
-      <img src="b1.jpeg" alt="LK tote bags">
-      <img src="b8.jpeg" alt="LK tote bags">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b1.jpeg" alt="LK tote bags">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b8.jpeg" alt="LK tote bags">
     </div>
 
     <button class="slide-btn prev">❮</button>
@@ -351,8 +351,8 @@
 
   <div class="img-slider">
     <div class="slides">
-      <img src="b2.jpeg" alt="Minkol Koge">
-      <img src="b.jpeg" alt="Minkol Koge">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b2.jpeg" alt="Minkol Koge">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b.jpeg" alt="Minkol Koge">
       </div>
         <button class="slide-btn prev">❮</button>
     <button class="slide-btn next">❯</button>
@@ -368,8 +368,8 @@
 
   <div class="img-slider">
     <div class="slides">
-      <img src="b4.jpeg" alt="LK tote bags - white">
-      <img src="b3.jpeg" alt="3 in 1 tote bag - pink">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b4.jpeg" alt="LK tote bags - white">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b3.jpeg" alt="3 in 1 tote bag - pink">
     </div>
 
     <button class="slide-btn prev">❮</button>
@@ -382,18 +382,74 @@
   <p>Ghc 190.00</p>
   <button onclick="addToCart(this)">Add to Cart</button>
 </div>
-  <div class="card" data-name="Michael kors tote bag" data-price="220.00"><img src="b5.jpeg" alt="Michael kors tote bag"><h3>Michael kors tote bag</h3><p>Ghc 220.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
-  <div class="card" data-name="Mini Purse" data-price="75.00"><img src="b14.jpeg" alt="Mini Purse"><h3>Mini Purse</h3><p>Ghc 75.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
-  <div class="card" data-name="Ash Shoulder Bag" data-price="160.00"><img src="b16.jpeg" alt="Ash Shoulder Bag"><h3>Ash Shoulder Bag</h3><p>Ghc 160.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
-  <div class="card" data-name="Lacoste Tote Bags" data-price="180.00"><img src="b8.jpeg" alt="Lacoste tote bags"><h3>Lacoste tote bags</h3><p>Ghc 180.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
-  <div class="card" data-name="Cross handbag" data-price="80.00"><img src="b12.jpeg" alt="Cross handbag"><h3>Cross handbag</h3><p>Ghc 80.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
-  <div class="card" data-name="Designer Bag" data-price="220.00"><img src="b7.jpeg" alt="Designer Bag"><h3>Designer Bag</h3><p>Ghc 220.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
-  <div class="card" data-name="Min min tote bag" data-price="185.00"><img src="b6.jpeg" alt="Min min tote bag"><h3>Min min tote bag</h3><p>Ghc 185.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
-  <div class="card" data-name="Cross handbag" data-price="90.00"><img src="b13.jpeg" alt="Cross handbag"><h3>Cross handbag</h3><p>Ghc 90.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
-  <div class="card" data-name="Cute mini handbag" data-price="100.00"><img src="b11.jpeg" alt="Cute mini handbag"><h3>Cute mini handbag</h3><p>Ghc 100.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
-  <div class="card" data-name="2 in 1 ladies handbags pouch with tote bags" data-price="155.00"><img src="b15.jpeg" alt=""><h3>2 in 1 ladies handbags pouch with tote bags</h3><p>Ghc 155.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
-  <div class="card" data-name="Handbag" data-price="80.00"><img src="b10.jpeg" alt="Handbag"><h3>Handbag</h3><p>Ghc 80.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
-  <div class="card" data-name=" Ladies Handbag" data-price="100.00"><img src="b17.jpeg" alt="Ladies Handbag"><h3> Ladies Handbag</h3><p>Ghc 100.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+  <div class="card" data-name="Michael kors tote bag" data-price="220.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b5.jpeg" alt="Michael kors tote bag"><h3>Michael kors tote bag</h3><p>Ghc 220.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+  <div class="card" data-name="Mini Purse" data-price="75.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b14.jpeg" alt="Mini Purse"><h3>Mini Purse</h3><p>Ghc 75.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+    <div class="card" data-name="Michael kors tote bag" data-price="220.00">
+
+  <div class="img-slider">
+    <div class="slides">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b18.jpeg" alt="Michael kors tote bag">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b18a.jpeg" alt="Michael kors tote bag ">
+    </div>
+
+    <button class="slide-btn prev">❮</button>
+    <button class="slide-btn next">❯</button>
+
+    <div class="dots"></div>
+  </div>
+
+  <h3>Michael kors tote bag</h3>
+  <p>Ghc 220.00</p>
+  <button onclick="addToCart(this)">Add to Cart</button>
+</div>
+
+  <div class="card" data-name="Max kor tote bags" data-price="220.00">
+
+  <div class="img-slider">
+    <div class="slides">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b19.jpeg" alt="Max kor tote bags ">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b19a.jpeg" alt="Max kor tote bags ">
+    </div>
+
+    <button class="slide-btn prev">❮</button>
+    <button class="slide-btn next">❯</button>
+
+    <div class="dots"></div>
+  </div>
+
+  <h3>Max kor tote bags</h3>
+  <p>Ghc 220.00</p>
+  <button onclick="addToCart(this)">Add to Cart</button>
+</div>
+
+  <div class="card" data-name="LK tote bags" data-price="220.00">
+
+      <div class="img-slider">
+    <div class="slides">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b20.jpeg" alt="LK tote bags ">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b20a.jpeg" alt="LK tote bags ">
+    </div>
+
+    <button class="slide-btn prev">❮</button>
+    <button class="slide-btn next">❯</button>
+
+    <div class="dots"></div>
+  </div>
+
+  <h3>LK tote bags</h3>
+  <p>Ghc 220.00</p>
+  <button onclick="addToCart(this)">Add to Cart</button>
+</div>
+  <div class="card" data-name="Ash Shoulder Bag" data-price="160.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b16.jpeg" alt="Ash Shoulder Bag"><h3>Ash Shoulder Bag</h3><p>Ghc 160.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+  <div class="card" data-name="Lacoste Tote Bags" data-price="180.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b8.jpeg" alt="Lacoste tote bags"><h3>Lacoste tote bags</h3><p>Ghc 180.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+  <div class="card" data-name="Cross handbag" data-price="80.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b12.jpeg" alt="Cross handbag"><h3>Cross handbag</h3><p>Ghc 80.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+  <div class="card" data-name="Designer Bag" data-price="220.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b7.jpeg" alt="Designer Bag"><h3>Designer Bag</h3><p>Ghc 220.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+  <div class="card" data-name="Min min tote bag" data-price="185.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b6.jpeg" alt="Min min tote bag"><h3>Min min tote bag</h3><p>Ghc 185.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+  <div class="card" data-name="Cross handbag" data-price="90.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b13.jpeg" alt="Cross handbag"><h3>Cross handbag</h3><p>Ghc 90.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+  <div class="card" data-name="Cute mini handbag" data-price="100.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b11.jpeg" alt="Cute mini handbag"><h3>Cute mini handbag</h3><p>Ghc 100.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+  <div class="card" data-name="2 in 1 ladies handbags pouch with tote bags" data-price="155.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b15.jpeg" alt=""><h3>2 in 1 ladies handbags pouch with tote bags</h3><p>Ghc 155.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+  <div class="card" data-name="Handbag" data-price="80.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b10.jpeg" alt="Handbag"><h3>Handbag</h3><p>Ghc 80.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+  <div class="card" data-name=" Ladies Handbag" data-price="100.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b17.jpeg" alt="Ladies Handbag"><h3> Ladies Handbag</h3><p>Ghc 100.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
 
 </div>
 
