--- a/bodysplash.html
+++ b/bodysplash.html
@@ -177,7 +177,7 @@
 <body>
   <header>
     <div class="brand">
-      <img src="logo.png" alt="Scents & Slay Aesthetics logo">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/logo.png" alt="Scents & Slay Aesthetics logo">
       <div>
         <div style="font-weight:800">Scents & Slay Aesthetics</div>
         <div style="font-size:12px;color:var(--muted)">Shop Online</div>
@@ -223,15 +223,16 @@
 
     <div class="grid" id="grid">
       <!-- 37 Product Cards -->
-      <div class="card" data-name="Khamrah" data-price="40.00"><img src="s.jpeg" alt="KHAMRAH"><h4>Khamrah</h4><div class="price">Ghc 40.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name="JM" data-price="40.00"><img src="s3.jpeg" alt="JM"><h4>JM</h4><div class="price">Ghc 40.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name="Odour Epic" data-price="40.00"><img src="s5.jpeg" alt="ODOUR EPIC"><h4>Odour Epic</h4><div class="price">Ghc 40.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name="Little Black Hat" data-price="40.00"><img src="s2.jpeg" alt="LITTLE BLACK HAT"><h4>Little Black Hat</h4><div class="price">Ghc 40.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name="Odour Epic" data-price="40.00"><img src="s4.jpeg" alt="ODOUR EPIC"><h4>Odour Epic</h4><div class="price">Ghc 40.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name="JM" data-price="40.00"><img src="s3.jpeg" alt="JM"><h4>JM</h4><div class="price">Ghc 40.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name="Love Is Like Admiration" data-price="40.00"><img src="s1.jpeg" alt="LOVE IS LIKE ADMIRATION"><h4>Love Is Like Admiration</h4><div class="price">Ghc 40.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name="Khamrah" data-price="40.00"><img src="s.jpeg" alt="KHAMRAH"><h4>Khamrah</h4><div class="price">Ghc 40.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-    </div>
+      <div class="card" data-name="L'eau D'hiver" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/s4.jpeg" alt="L'eau D'hiver"><h4>L'eau D'hiver</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="Yara" data-price="40.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/s3.jpeg" alt="YARA"><h4>Yara</h4><div class="price">Ghc 40.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="Good Girl" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/s5.jpeg" alt="GOOD GIRL"><h4>Good Girl</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="Little Black Hat" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/s2.jpeg" alt="LITTLE BLACK HAT"><h4>Little Black Hat</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="Love Is Like Admiration" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/s1.jpeg" alt="LOVE IS LIKE ADMIRATION"><h4>Love Is Like Admiration</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="L'eau D'hiver" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/images/s4.jpeg" alt="L'eau D'hiver"><h4>L'eau D'hiver</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="Little Black Hat" data-price="35.00"><img src=https://scentsandslayaesthetics.github.io/onlineshop/images/s2.jpeg alt=KHAMRAH><h4>Little Black Hat</h4><div class=price>Ghc 35.00</div><button class=add onclick=addToCart(this)>Add to Cart</button></div>
+      <div class="card" data-name="Yara" data-price="40.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/images/s3.jpeg" alt="YARA"><h4>Yara</h4><div class="price">Ghc 40.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="Good Girl" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/images/s5.jpeg" alt="GOOD GIRL"><h4>Good Girl</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      </div>
   </main>
   <div class="cart-btn" id="cartBtn" onclick="openCart()">🛒 <span id="cartCount">0</span></div>
 
