--- a/bracelets.html
+++ b/bracelets.html
@@ -167,7 +167,7 @@
 <body>
   <header>
     <div class="brand">
-      <img src="logo.png" alt="Scents & Slay Aesthetics logo">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/logo.png" alt="Scents & Slay Aesthetics logo">
       <div>
         <div style="font-weight:800">Scents & Slay Aesthetics</div>
         <div style="font-size:12px;color:var(--muted)">Shop Online</div>
@@ -213,14 +213,19 @@
 
     <div class="grid" id="grid">
       <!-- 4 Product Cards -->
-      <div class="card" data-name=" Classic B" data-price="35.00"><img src="bs1.jpeg" alt="Men's Classic bracelet"><h4>Red Classic Bracelet</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name="Ladies Gem" data-price="35.00"><img src="bs4.jpeg" alt=" Gem bracelet"><h4>Ladies Gold</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name="Luxurious" data-price="35.00"><img src="bs2.jpeg" alt="Luxury Royal bracelet"><h4>Luxury Royal</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name=" Gold" data-price="35.00"><img src="bs3.jpeg" alt="Rose Gold bracelet"><h4>Rose Gold</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name="Classic" data-price="35.00"><img src="bs5.jpeg" alt="Men's Classic bracelet"><h4>Classic Bracelet</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name=" Gold Bracelet" data-price="35.00"><img src="bs6.jpeg" alt="Ladies Gold bracelet"><h4>Gold Bracelet</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name="Luxury Royal" data-price="35.00"><img src="bs7.jpeg" alt="Luxury Royal bracelet"><h4>Royal</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
-      <div class="card" data-name=" Gold Bracelet" data-price="35.00"><img src="bs8.jpeg" alt="Rose Goldbracelet"><h4> Shinny Gold Bracelet</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div> 
+      <div class="card" data-name=" Classic Star Bracelet " data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/bs20.jpeg" alt=" Classic bracelet"><h4>Classic Star Bracelet</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="Ladies Gem" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/bs19.jpeg" alt=" Gem bracelet"><h4>Ladies Gold</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="Luxury Royal Bracelet" data-price="50.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/bs21.jpeg" alt="Luxury Royal Bracelet"><h4>Luxury Royal Bracelet</h4><div class="price">Ghc 50.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name=" Shiny Gold" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/bs18.jpeg" alt=" Shiny Gold bracelet"><h4> Shiny Gold Bracelet</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="Classic" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/bs17.jpeg" alt=" Classic bracelet"><h4>Classic Bracelet</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name=" Gold Bracelet" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/bs16.jpeg" alt="Ladies Gold bracelet"><h4>Gold Bracelet</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="Classic Blue Bracelet" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/bs15.jpeg" alt="Classic Blue bracelet"><h4>Classic Blue Bracelet</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="Delicate Gold Bracelet" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/bs11.jpeg" alt="Delicate Gold bracelet"><h4>Delicate Gold Bracelet</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div> 
+      <div class="card" data-name= "Ladies Gem Bracelet" data-price= "35.00"><img src= "https://scentsandslayaesthetics.github.io/onlineshop/bs12.jpeg" alt= " Gem bracelet"><h4>Ladies Gem Bracelet</h4><div class= "price">Ghc 35.00</div><button class= "add" onclick= "addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="Luxury Red Bracelet" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/bs13.jpeg" alt="Luxury Red bracelet"><h4>Luxury Red Bracelet</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name=" Rose Gold Brcelet" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/bs10.jpeg" alt="Rose Gold bracelet"><h4>Rose Gold Bracelet</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name="Classic Gold Bracelet" data-price="35.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/bs9.jpeg" alt=" Classic bracelet"><h4>Classic Gold Bracelet</h4><div class="price">Ghc 35.00</div><button class="add" onclick="addToCart(this)">Add to Cart</button></div>
+      <div class="card" data-name= " Black Gold Bracelet" data-price= "35.00"><img src= "https://scentsandslayaesthetics.github.io/onlineshop/bs14.jpeg" alt= "Ladies Gold bracelet"><h4>Black Gold Bracelet</h4><div class= "price">Ghc 35.00</div><button class= "add" onclick= "addToCart(this)">Add to Cart</button></div>
     </div>
   </main>
 
