--- a/homepage.html
+++ b/homepage.html
@@ -392,7 +392,7 @@
 
   <header>
     <div style="display:flex; align-items:center; gap:10px;">
-      <img src="logo.png" alt="Scents & Slay Aesthetics logo">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/logo.png" alt="Scents & Slay Aesthetics logo">
       <h2 style="margin:0;">Scents & Slay Aesthetics</h2>
     </div>
 
@@ -433,70 +433,70 @@
   <!-- PRODUCT GRID -->
   <div class="items" id="productGrid">
     <div class="card" data-name="Maison Francis Kurkdijan Paris" data-price="280" data-img="p18.jpeg">
-      <img src="p18.jpeg" alt="Perfumes">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/p18.jpeg" alt="Perfumes">
       <h3>Maison Francis Kurkdijan Paris</h3>
       <p>Ghc 280.00</p>
       <button onclick="addToCart(this)">Add to Cart</button>
     </div>
 
     <div class="card" data-name="3 in 1 tote bag - white" data-price="190" data-img="b4.jpeg">
-      <img src="b4.jpeg" alt="3 in 1 tote bag - white">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b4.jpeg" alt="3 in 1 tote bag - white">
       <h3>3 in 1 tote bag - white</h3>
       <p>Ghc 190.00</p>
       <button onclick="addToCart(this)">Add to Cart</button>
     </div>
 
     <div class="card" data-name="Little Black Hat" data-price="40" data-img="s2.jpeg">
-      <img src="s2.jpeg" alt="Body Splash">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/s2.jpeg" alt="Body Splash">
       <h3>Little Black Hat</h3>
       <p>Ghc 40.00</p>
       <button onclick="addToCart(this)">Add to Cart</button>
     </div>
 
-    <div class="card" data-name="Red Classic Bracelet" data-price="35" data-img="bs1.jpeg">
-      <img src="bs1.jpeg" alt="Red Classic Bracelet">
-      <h3>Red Classic Bracelet</h3>
+    <div class="card" data-name="Luxury Red Bracelet" data-price="35" data-img="bs13.jpeg">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/bs13.jpeg" alt="Luxury Red Bracelet">
+      <h3>Luxury Red Bracelet</h3>
       <p>Ghc 35.00</p>
       <button onclick="addToCart(this)">Add to Cart</button>
     </div>
 
     <div class="card" data-name="Ash Shoulder Bag" data-price="160" data-img="b16.jpeg">
-      <img src="b16.jpeg" alt="Ash Shoulder Bag">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b16.jpeg" alt="Ash Shoulder Bag">
       <h3>Ash Shoulder Bag</h3>
       <p>Ghc 160.00</p>
       <button onclick="addToCart(this)">Add to Cart</button>
     </div>
 
     <div class="card" data-name="ZARA MAN" data-price="300" data-img="p15.jpeg">
-      <img src="p15.jpeg" alt="ZARA MAN">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/p15.jpeg" alt="ZARA MAN">
       <h3>Zara Man</h3>
       <p>Ghc 300.00</p>
       <button onclick="addToCart(this)">Add to Cart</button>
     </div>
 
     <div class="card" data-name="Rolex  Watch" data-price="190" data-img="w6.jpeg">
-      <img src="w6.jpeg" alt="Rolex Watch">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/w6.jpeg" alt="Rolex Watch">
       <h3>Rolex Watch</h3>
       <p>Ghc 190.00</p>
       <button onclick="addToCart(this)">Add to Cart</button>
     </div>
 
-    <div class="card" data-name="NG Nails" data-price="25" data-img="po3.jpeg">
-      <img src="po3.jpeg" alt="NG Nails">
-      <h3>NG Nails</h3>
-      <p>Ghc 25.00</p>
+    <div class="card" data-name="Fashion Nails" data-price="35" data-img="po3.jpeg">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/po3.jpeg" alt="Fashion Nails">
+      <h3>Fashion Nails</h3>
+      <p>Ghc 35.00</p>
       <button onclick="addToCart(this)">Add to Cart</button>
     </div>
 
     <div class="card" data-name="ASAD Zanzibar" data-price="180" data-img="p28.jpeg">
-      <img src="p28.jpeg" alt="ASAD Zanzibar">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/p28.jpeg" alt="ASAD Zanzibar">
       <h3>ASAD Zanzibar</h3>
       <p>Ghc 180.00</p>
       <button onclick="addToCart(this)">Add to Cart</button>
     </div>
 
     <div class="card" data-name="Club De Nuit" data-price="650" data-img="p5.jpeg">
-      <img src="p5.jpeg" alt="Club de Nuit Perfume">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/p5.jpeg" alt="Club de Nuit Perfume">
       <h3>Club De Nuit</h3>
       <p>Ghc 650.00</p>
       <button onclick="addToCart(this)">Add to Cart</button>
