--- a/press-on nails.html
+++ b/press-on nails.html
@@ -162,7 +162,7 @@
 <body>
   <header>
     <div class="brand">
-      <img src="logo.png" alt="Scents & Slay Aesthetics logo">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/logo.png" alt="Scents & Slay Aesthetics logo">
       <div>
         <div style="font-weight:800">Scents & Slay Aesthetics</div>
         <div style="font-size:12px;color:var(--muted)">Shop Online</div>
@@ -206,61 +206,82 @@
     <h1 style="text-align:center;margin-bottom:14px">Press-on nails Collection</h1>
 
     <section class="grid" id="grid">
-      <div class="card" data-name="NG Nails" data-price="25.00">
-        <img src="po1.jpeg" alt="">
-        <h4>NG Nails</h4><div class="price">Ghc25.00</div>
+      <div class="card" data-name="Fashion Nails" data-price="35.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po1.jpeg" alt="">
+        <h4>Fashion Nails</h4><div class="price">Ghc35.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
-      <div class="card" data-name="NG Nails" data-price="25.00">
-        <img src="po3.jpeg" alt="">
-        <h4>NG Nails</h4><div class="price">Ghc25.00</div>
+      <div class="card" data-name="Fashion Nails" data-price="35.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po3.jpeg" alt="">
+        <h4>Fashion Nails</h4><div class="price">Ghc35.00</div>
+        <button class="add" onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      <div class="card" data-name="NG Nails" data-price="30.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po13.jpeg" alt="">
+        <h4>NG Nails</h4><div class="price">Ghc30.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="Nail Art" data-price="30.00">
-        <img src="po7.jpeg" alt="">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po7.jpeg" alt="">
         <h4>Nail Art</h4><div class="price">Ghc30.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
-      <div class="card" data-name="Nail Art" data-price="30.00">
-        <img src="po5.jpeg" alt="">
-        <h4>Nail Art</h4><div class="price">Ghc30.00</div>
+      <div class="card" data-name="Fashion Nails" data-price="35.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po5.jpeg" alt="">
+        <h4>Fashion Nails</h4><div class="price">Ghc35.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="Nail Art" data-price="30.00">
-        <img src="po8.jpeg" alt="">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po8.jpeg" alt="">
         <h4>Nail Art</h4><div class="price">Ghc30.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
 
-      <div class="card" data-name="Nail Art" data-price="30.00">
-        <img src="po10.jpeg" alt="">
-        <h4>Nail Art</h4><div class="price">Ghc30.00</div>
+      <div class="card" data-name="Fashion Nails" data-price="35.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po10.jpeg" alt="">
+        <h4> Fashion Nails </h4><div class="price">Ghc35.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       </div>
-      <div class="card" data-name="Nail Art" data-price="30.00">
-        <img src="po12.jpeg" alt="">
-        <h4>Nail Art</h4><div class="price">Ghc30.00</div>
-        <button class="add" onclick="addToCart(this)">Add to Cart</button>
-      </div>
-      <div class="card" data-name="Nail Art" data-price="30.00">
-        <img src="po11.jpeg" alt="">
-        <h4>Nail Art</h4><div class="price">Ghc30.00</div>
-        <button class="add" onclick="addToCart(this)">Add to Cart</button>
-      </div>
-      <div class="card" data-name="NG Nails" data-price="25.00">
-        <img src="po9.jpeg" alt="">
-        <h4>NG Nails</h4><div class="price">Ghc25.00</div>
+      <div class="card" data-name="Nails Arts" data-price="30.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po12.jpeg" alt="">
+        <h4>Nails Arts</h4><div class="price">Ghc30.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="Nail Art" data-price="30.00">
-        <img src="po6.jpeg" alt="">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po11.jpeg" alt="">
         <h4>Nail Art</h4><div class="price">Ghc30.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
-      <div class="card" data-name="NG Nails" data-price="25.00">
-        <img src="po2.jpeg" alt="">
-        <h4>NG Nails</h4><div class="price">Ghc25.00</div>
+      <div class="card" data-name="Fashion Nails" data-price="35.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po9.jpeg" alt="">
+        <h4>Fashion Nails</h4><div class="price">Ghc35.00</div>
+        <button class="add" onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      <div class="card" data-name="NG Nails" data-price="30.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po14.jpeg" alt="">
+        <h4>NG Nails</h4><div class="price">Ghc30.00</div>
+        <button class="add" onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      
+      <div class="card" data-name="Nail Art" data-price="30.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po6.jpeg" alt="">
+        <h4>Nail Art</h4><div class="price">Ghc30.00</div>
+        <button class="add" onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      <div class="card" data-name="Fashion Nails" data-price="35.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po2.jpeg" alt="">
+        <h4>Fashion Nails</h4><div class="price">Ghc35.00</div>
+        <button class="add" onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      <div class="card" data-name="Nail Art" data-price="30.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po15.jpeg" alt="">
+        <h4>Nail Art</h4><div class="price">Ghc30.00</div>
+        <button class="add" onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      <div class="card" data-name="Fashion Nails" data-price="35.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po4.jpeg" alt="">
+        <h4>Fashion Nails</h4><div class="price">Ghc35.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
     </section>
