--- a/watches.html
+++ b/watches.html
@@ -165,7 +165,7 @@
 <body>
   <header>
     <div class="brand">
-      <img src="logo.png" alt="Scents & Slay Aesthetics logo">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/logo.png" alt="Scents & Slay Aesthetics logo">
       <div>
         <div style="font-weight:800">Scents & Slay Aesthetics</div>
         <div style="font-size:12px;color:var(--muted)">Shop Online</div>
@@ -211,53 +211,52 @@
 
     <section class="grid" id="grid">
       <div class="card" data-name="Watch Set" data-price="260.00">
-        <img src="w1.jpeg" alt="Watch Seth">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w1.jpeg" alt="Watch Set">
         <h4>Watch Set</h4><div class="price">Ghc 260.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="Ladies Gold" data-price="">
-        <img src="w1.PNG" alt="Ladies Gold watch">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w1.png" alt="Ladies Gold watch">
         <h4>Ladies Gold</h4><div class="price">Out Of Stock</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="Smart Watch" data-price="85.00">
-        <img src="w2.jpeg" alt="Smart Watch">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w2.jpeg" alt="Smart Watch">
         <h4>Smart Watch</h4><div class="price">Ghc 85.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="Rolex Watch" data-price="310.00">
-        <img src="w3.jpeg" alt="Rolex Watch">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w3.jpeg" alt="Rolex Watch">
         <h4>Rolex Watch</h4><div class="price">Ghc 310.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="Watch Set" data-price="">
-        <img src="w3.PNG" alt="Watch Set">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w3.png" alt="Watch Set">
         <h4>Watch Set</h4><div class="price">Out Of Stock</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="Watch Set" data-price="250.00">
-        <img src="w4.jpeg" alt="Watch Set">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w4.jpeg" alt="Watch Set">
         <h4>Watch Set</h4><div class="price">Ghc 250.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="Rolex Watch" data-price="190.00">
-        <img src="w5.jpeg" alt="Rolex Watch">
-        <h4>Rolex Watch</h4><div class="price">Ghc 190.00</div>
-        <h4></h4><div class="price">Ghc 190.00</div>
-        <button class="add" onclick="addToCart(this)">Add to Cart</button>
-      </div>
-      <div class="card" data-name="Rolex Watch" data-price="190.00">
-        <img src="w6.jpeg" alt="Rolex Watch">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w5.jpeg" alt="Rolex Watch">
         <h4>Rolex Watch</h4><div class="price">Ghc 190.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="Rolex Watch" data-price="190.00">
-        <img src="w7.jpeg" alt="Rolex watch">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w6.jpeg" alt="Rolex Watch">
+        <h4>Rolex Watch</h4><div class="price">Ghc 190.00</div>
+        <button class="add" onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      <div class="card" data-name="Rolex Watch" data-price="190.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w7.jpeg" alt="Rolex watch">
         <h4>Rolex Watch</h4><div class="price">Ghc 190.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="For Men" data-price="130.00">
-        <img src="w8.jpeg" alt="Luxury Royal watch">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w8.jpeg" alt="Luxury Royal watch">
         <h4>For Men</h4><div class="price">Ghc 130.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
@@ -275,7 +274,7 @@
 
   <div class="modal-back" id="cartModal"><div class="modal"><div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px"><h3 style="margin:0">Your Cart</h3><button id="closeCart" aria-label="Close cart" style="background:transparent;border:0;font-size:20px;cursor:pointer;color:#666">✕</button></div><div id="cartItems"></div><div style="margin-top:10px;display:flex;justify-content:space-between;align-items:center"><strong>Subtotal:</strong><div id="subtotal">Ghc 0.00</div></div><div style="margin-top:12px;display:flex;gap:8px;justify-content:flex-end"><button onclick="clearCart()" style="padding:8px 10px;border-radius:8px;border:1px solid #ddd;background:#fff;cursor:pointer">Clear</button><button onclick="checkout()" style="padding:8px 12px;border-radius:8px;border:0;background:var(--accent);color:#fff;cursor:pointer">Checkout</button></div></div></div>
 
-  <footer><div class="container" style="max-width:1100px;margin:0 auto"><p style="margin:8px 0 0">© 2025 Scents & Slay Aesthetics — All rights reserved</p></div></footer>
+  <footer><div class="container" style="max-width:1100px;margin:0 auto"><p style="margin:8px 0 0">© 2026 Scents & Slay Aesthetics — All rights reserved</p></div></footer>
 
     <script>
     // CART + SEARCH SCRIPT
