--- a/Others.html
+++ b/Others.html
@@ -151,7 +151,7 @@ button.disabled {
 <body>
   <header>
     <div class="brand">
-      <img src="logo.png" alt="Scents & Slay Aesthetics logo">
+      <img src="Logo.png" alt="Scents & Slay Aesthetics logo">
       <div>
         <div style="font-weight:800">Scents & Slay Aesthetics</div>
         <div style="font-size:12px;color:var(--muted)">Shop Online</div>
