--- a/homepage.html
+++ b/homepage.html
@@ -392,7 +392,7 @@
 
   <header>
     <div style="display:flex; align-items:center; gap:10px;">
-      <img src="https://scentsandslayaesthetics.github.io/onlineshop/logo.png" alt="Scents & Slay Aesthetics logo">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/Logo.png" alt="Scents & Slay Aesthetics logo">
       <h2 style="margin:0;">Scents & Slay Aesthetics</h2>
     </div>
 
