--- a/watches.html
+++ b/watches.html
@@ -165,7 +165,7 @@
 <body>
   <header>
     <div class="brand">
-      <img src="https://scentsandslayaesthetics.github.io/onlineshop/logo.png" alt="Scents & Slay Aesthetics logo">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/Logo.png" alt="Scents & Slay Aesthetics logo">
       <div>
         <div style="font-weight:800">Scents & Slay Aesthetics</div>
         <div style="font-size:12px;color:var(--muted)">Shop Online</div>
@@ -216,13 +216,13 @@
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="Ladies Gold" data-price="">
-        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w1.png" alt="Ladies Gold watch">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w1.PNG" alt="Ladies Gold watch">
         <h4>Ladies Gold</h4><div class="price">Out Of Stock</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
-      <div class="card" data-name="Smart Watch" data-price="85.00">
-        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w2.jpeg" alt="Smart Watch">
-        <h4>Smart Watch</h4><div class="price">Ghc 85.00</div>
+      <div class="card" data-name="Crystal Royale Watch" data-price="85.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w2.jpeg" alt="Crystal Royale Watch">
+        <h4>Crystal Royale Watch</h4><div class="price">Ghc 85.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="Rolex Watch" data-price="310.00">
@@ -231,7 +231,7 @@
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
       <div class="card" data-name="Watch Set" data-price="">
-        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w3.png" alt="Watch Set">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w3.PNG" alt="Watch Set">
         <h4>Watch Set</h4><div class="price">Out Of Stock</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
@@ -255,9 +255,9 @@
         <h4>Rolex Watch</h4><div class="price">Ghc 190.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
-      <div class="card" data-name="For Men" data-price="130.00">
-        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w8.jpeg" alt="Luxury Royal watch">
-        <h4>For Men</h4><div class="price">Ghc 130.00</div>
+      <div class="card" data-name="Regal Link For Men" data-price="130.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w8.jpeg" alt="Regal Link For Men">
+        <h4>Regal Link For Men</h4><div class="price">Ghc 130.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
     </section>
