--- a/bags.html
+++ b/bags.html
@@ -445,7 +445,42 @@
   <div class="card" data-name="2 in 1 ladies handbags pouch with tote bags" data-price="155.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b15.jpeg" alt=""><h3>2 in 1 ladies handbags pouch with tote bags</h3><p>Ghc 155.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
   <div class="card" data-name="Handbag" data-price="80.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b10.jpeg" alt="Handbag"><h3>Handbag</h3><p>Ghc 80.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
   <div class="card" data-name=" Ladies Handbag" data-price="100.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b17.jpeg" alt="Ladies Handbag"><h3> Ladies Handbag</h3><p>Ghc 100.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+<div class="card" data-name="Cute Ladies Handbag" data-price="110.00">
 
+  <div class="img-slider">
+    <div class="slides">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b21.jpeg" alt="Cute Ladies Handbag">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b21a.jpeg" alt="Cute Ladies Handbag">
+      </div>
+        <button class="slide-btn prev">❮</button>
+    <button class="slide-btn next">❯</button>
+
+    <div class="dots"></div>
+  </div>
+  <h3>Cute Ladies Handbag</h3>
+  <p>Ghc 110.00</p>
+  <button onclick="addToCart(this)">Add to Cart</button>
+</div>
+
+<div class="card" data-name="Leather Single Shoulder Bags" data-price="100.00">
+
+  <div class="img-slider">
+    <div class="slides">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b22.jpeg" alt="Leather Single Shoulder Bags">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b22a.jpeg" alt="Leather Single Shoulder Bags">
+      <img src="https://scentsandslayaesthetics.github.io/onlineshop/b22b.jpeg" alt="Leather Single Shoulder Bags">
+    </div>
+        <button class="slide-btn prev">❮</button>
+    <button class="slide-btn next">❯</button>
+
+    <div class="dots"></div>
+  </div>
+  <h3>Leather Single Shoulder Bags</h3>
+  <p>Ghc 100.00</p>
+  <button onclick="addToCart(this)">Add to Cart</button>
+</div>
+<div class="card" data-name="Cute Tote Bags" data-price="150.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b6.jpeg" alt=""><h3> Cute Tote Bags</h3><p>Ghc 150.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
+<div class="card" data-name=" Miss DG Shoulder Bags" data-price="130.00"><img src="https://scentsandslayaesthetics.github.io/onlineshop/b16.jpeg" alt="Ladies Handbag"><h3> Miss DG Shoulder Bags</h3><p>Ghc 130.00</p><button onclick="addToCart(this)">Add to Cart</button></div>
 </div>
 
 <div class="cart-btn" id="cartBtn" onclick="openCart()">🛒 <span id="cartCount">0</span></div>
