--- a/watches.html
+++ b/watches.html
@@ -260,6 +260,11 @@
         <h4>Regal Link For Men</h4><div class="price">Ghc 130.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
+      <div class="card" data-name="Watch Set" data-price="200.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/w9.jpeg" alt="Watch Set">
+        <h4>Watch Set</h4><div class="price">Ghc 200.00</div>
+        <button class="add" onclick="addToCart(this)">Add to Cart</button>
+      </div>
     </section>
   </main>
 
