--- a/bags.html
+++ b/bags.html
@@ -152,6 +152,15 @@
     .image-modal .close-btn:hover{background:#cc5200}
     .card img{cursor:pointer}
 
+    /* Modal slider adjustments */
+    .modal-slider { position: relative; display:flex;align-items:center;justify-content:center; }
+    .modal-slider img { max-width:100%; max-height:75vh; object-fit:contain; display:block }
+    .modal-slider .slide-btn { position: absolute; top:50%; transform: translateY(-50%); left:8px; right:auto; opacity:1; }
+    .modal-slider .slide-btn.next { left:auto; right:8px }
+    .modal-slider .dots { position: absolute; bottom:10px; left:50%; transform:translateX(-50%); }
+    .modal-slider .dots span { width:7px; height:7px; border-radius:50%; background: rgba(0,0,0,0.2); display:inline-block; margin:4px; cursor:pointer }
+    .modal-slider .dots span.active { background: var(--accent); }
+
     @media (max-width:768px){.category-box{display:none}}
     @media (max-width:600px){nav a{display:none}h1{font-size:20px}.items{grid-template-columns:repeat(auto-fill,minmax(140px,1fr));padding:0 8px}.card{padding:8px}.card button{padding:10px 12px;min-height:40px}.cart-btn{padding:12px 16px;min-width:48px;min-height:48px}.modal{width:95vw;max-width:100%}.image-modal{max-width:95vw;max-height:90vh}.footer{font-size:12px;padding:12px 8px}}
     @media (max-width:480px){.image-modal{padding:8px;max-height:85vh}.image-modal img{max-height:70vh}}
@@ -488,7 +497,12 @@
 <div class="image-modal-back" id="imageModal">
   <div class="image-modal">
     <button class="close-btn" id="closeImageBtn" aria-label="Close image preview">✕</button>
-    <img id="previewImage" src="" alt="Product image preview">
+    <div class="modal-slider" id="modalSlider">
+      <img id="previewImage" src="" alt="Product image preview">
+      <button class="slide-btn prev" id="modalPrev">❮</button>
+      <button class="slide-btn next" id="modalNext">❯</button>
+      <div class="dots" id="modalDots"></div>
+    </div>
   </div>
 </div>
 
@@ -554,8 +568,7 @@
       img.alt=it.name;
       img.style.cursor='pointer';
       img.addEventListener('click', function() {
-        document.getElementById('previewImage').src = this.src;
-        document.getElementById('imageModal').style.display = 'flex';
+        openImagePreview([this.src], 0);
       });
       const info=document.createElement('div');
       info.innerHTML=`<strong>${it.name}</strong><br>Ghc${it.price.toFixed(2)}`;
@@ -651,25 +664,67 @@
   const imageModal = document.getElementById('imageModal');
   const previewImage = document.getElementById('previewImage');
   const closeImageBtn = document.getElementById('closeImageBtn');
+  const modalPrev = document.getElementById('modalPrev');
+  const modalNext = document.getElementById('modalNext');
+  const modalDots = document.getElementById('modalDots');
 
-  document.querySelectorAll('.card img').forEach(img => {
-    img.addEventListener('click', function() {
-      previewImage.src = this.src;
-      previewImage.alt = this.alt;
-      imageModal.style.display = 'flex';
+  let modalImages = [];
+  let modalIndex = 0;
+
+  function renderModal() {
+    if (!modalImages.length) return;
+    previewImage.src = modalImages[modalIndex];
+    previewImage.alt = '';
+    modalDots.innerHTML = '';
+    modalImages.forEach((s, i) => {
+      const d = document.createElement('span');
+      if (i === modalIndex) d.classList.add('active');
+      d.addEventListener('click', () => { modalIndex = i; renderModal(); });
+      modalDots.appendChild(d);
     });
+  }
+
+  function openImagePreview(images, start = 0) {
+    modalImages = images.slice();
+    modalIndex = start || 0;
+    renderModal();
+    imageModal.style.display = 'flex';
+  }
+
+  modalPrev.addEventListener('click', () => {
+    if (!modalImages.length) return;
+    modalIndex = (modalIndex - 1 + modalImages.length) % modalImages.length;
+    renderModal();
   });
 
-  closeImageBtn.addEventListener('click', () => {
-    imageModal.style.display = 'none';
+  modalNext.addEventListener('click', () => {
+    if (!modalImages.length) return;
+    modalIndex = (modalIndex + 1) % modalImages.length;
+    renderModal();
   });
 
-  imageModal.addEventListener('click', (e) => {
-    if(e.target.id === 'imageModal') imageModal.style.display = 'none';
+  // Attach click handlers to card images: support slider images and single images
+  document.querySelectorAll('.card').forEach(card => {
+    const slider = card.querySelector('.img-slider');
+    if (slider) {
+      const imgs = Array.from(slider.querySelectorAll('img')).map(i => i.src);
+      slider.querySelectorAll('img').forEach((img, i) => img.addEventListener('click', () => openImagePreview(imgs, i)));
+    } else {
+      const img = card.querySelector('img');
+      if (img) img.addEventListener('click', () => openImagePreview([img.src], 0));
+    }
   });
+
+  closeImageBtn.addEventListener('click', () => { imageModal.style.display = 'none'; });
+
+  imageModal.addEventListener('click', (e) => { if (e.target.id === 'imageModal') imageModal.style.display = 'none'; });
 
   window.addEventListener('keydown', (e) => {
-    if(e.key === 'Escape' && imageModal.style.display === 'flex') imageModal.style.display = 'none';
+    if (e.key === 'Escape') imageModal.style.display = 'none';
+    if (imageModal.style.display === 'flex' && modalImages.length) {
+      if (e.key === 'ArrowLeft') modalPrev.click();
+      if (e.key === 'ArrowRight') modalNext.click();
+    }
   });
 document.querySelectorAll(".img-slider").forEach(slider => {
   const slides = slider.querySelector(".slides");
