--- a/bags.html
+++ b/bags.html
@@ -4,6 +4,18 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bags - Scents & Slay Aesthetics</title>
+  <!-- Basic Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="https://scentsandslayaesthetics.github.io/onlineshop/Logo.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://scentsandslayaesthetics.github.io/onlineshop/Logo.png">
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="https://scentsandslayaesthetics.github.io/onlineshop/Logo.png">
+  <!-- Android / Chrome -->
+  <link rel="icon" type="image/png" sizes="192x192" href="https://scentsandslayaesthetics.github.io/onlineshop/Logo.png">
+  <!-- Windows Tile -->
+  <meta name="msapplication-TileImage" content="https://scentsandslayaesthetics.github.io/onlineshop/Logo.png">
+  <meta name="msapplication-TileColor" content="#000000">
+  <!-- Theme Color (Mobile Browser Top Bar Color) -->
+  <meta name="theme-color" content="#000000">
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -288,6 +300,8 @@
 
 
   </style>
+    <link rel="icon" type="image/png" href="https://scentsandslayaesthetics.github.io/onlineshop/Logo.png">
+</head>
 </head>
 <body>
 <header>
